@@ -1,5 +1,6 @@
 package uk.bot_by.ipinfo;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.StringStartsWith.startsWith;
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -27,7 +28,7 @@ class IpInfoSlowTest {
   @Test
   void fullResult() throws IOException {
     // given
-    var responseBody = Files.readAllBytes(Path.of("src/test/resources/google-dns.json"));
+    var responseBody = Files.readString(Path.of("src/test/resources/google-dns.json"), UTF_8);
     var mockClient = new MockClient().ok(HttpMethod.GET, "https://ipinfo.io/8.8.8.8", responseBody);
     var client = Feign.builder().client(mockClient).decoder(new JsonDecoder())
         .target(IpInfo.class, IpInfo.API_LOCATOR);
